--- a/style.css
+++ b/style.css
@@ -24,16 +24,21 @@ html {
 display: flex;
 margin:0 auto;
 border: 1px solid black;
-width: 90%;
+width: 70%;
 height: 425px;
 justify-content: space-around;
 }
 
 .playerDiv, .computerDiv{
-    display: flex;
-    justify-content: space-around;
-    border: 1px solid white;
+    /* display: flex; */
+    /* justify-content: space-around; */
+    /* border: 1px solid white; */
     width: 25%;
-
 }
+.playerInfo, .computerInfo {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid white;
+}
+
 
