--- a/style.css
+++ b/style.css
@@ -97,6 +97,10 @@ html {
   justify-content: center;
 }
 
-.computerChoice {
-  transform: translate();
+
+
+.winner{
+margin: 20px auto 0;
+text-align: center;
+font-size: 3rem;
 }
