--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html {
 }
 
 .root {
-  height: 2000px;
+  height: 100vh;
 }
 .app {
   margin: 0 auto;
@@ -88,25 +88,23 @@ html {
 }
 
 .startBtn {
-  width: 100px;
-  height: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  font-size: 2rem;
+  width: 150px;
+  height: 150px;
+  font-weight: 800;
   border-radius: 20px;
   padding: 10px;
-  /* margin: 200px 200px 200px 200px; */
   align-items: center;
   justify-content: center;
+  background-color: grey;
+  cursor: pointer;
 }
 
-/* .modalOverlay{
-  display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    z-index: 1;
-} */
+
 
 
 .winner {
@@ -129,7 +127,7 @@ html {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(3px);
   z-index: 1;
